// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniswapV3Pair swap tests close to max price swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "1000",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "-26083549850867114346332688477747755628",
  "executionPrice": "2.6084e+34",
  "feeGrowthGlobal0X128Delta": "2381976568446569244235",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "4.1734e+30",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 705098,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "0",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "1000",
  "executionPrice": "-Infinity",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "1.7014e+38",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 880340,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "-26087635650665564420687107504180041533",
  "executionPrice": "2.6088e+19",
  "feeGrowthGlobal0X128Delta": "510423550381413479995299567101531162",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "4.0241",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 13923,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "0",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "-Infinity",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195061911147652317",
  "pairPriceAfter": "1.7014e+38",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 880340,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "2",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "-1000",
  "executionPrice": "500.00",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.7014e+38",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 880340,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "2",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "5.0000e+17",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.7014e+38",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 880340,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "3171793039286238109",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "-26087635650665564423434232548437664977",
  "executionPrice": "8.2249e+18",
  "feeGrowthGlobal0X128Delta": "1618957864187523123655042148763283097",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": -9164,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token0 for token1 to price 2.5000 1`] = `
Object {
  "amount0Before": "1",
  "amount0Delta": "1268717215714495281",
  "amount1Before": "26087635650665564424699143612505016738",
  "amount1Delta": "-26087635650665564421536865952336637378",
  "executionPrice": "2.0562e+19",
  "feeGrowthGlobal0X128Delta": "647583145675012618257449376796101507",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.7014e+38",
  "tickAfter": 9163,
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "pairBalance0": "1",
  "pairBalance1": "26087635650665564424699143612505016738",
  "pairPriceBefore": "1.7014e+38",
  "swapError": "VM Exception while processing transaction: revert TN",
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "pairBalance0": "1",
  "pairBalance1": "26087635650665564424699143612505016738",
  "pairPriceBefore": "1.7014e+38",
  "swapError": "VM Exception while processing transaction: revert TN",
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "1",
  "pairBalance1": "26087635650665564424699143612505016738",
  "pairPriceBefore": "1.7014e+38",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to max price swap token1 for token0 to price 2.5000 1`] = `
Object {
  "pairBalance0": "1",
  "pairBalance1": "26087635650665564424699143612505016738",
  "pairPriceBefore": "1.7014e+38",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 880340,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "1000",
  "amount1Before": "1",
  "amount1Delta": "0",
  "executionPrice": "0.0000",
  "feeGrowthGlobal0X128Delta": "170141183460469231731687",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.0000000000000000000000000000000000000059000",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -880303,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "-26033697540846965126433148994127431276",
  "amount1Before": "1",
  "amount1Delta": "1000",
  "executionPrice": "0.000000000000000000000000000000000038412",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "2381976568446569244235",
  "pairPriceAfter": "0.00000000000000000000000000000023974",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -705093,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "1",
  "amount1Delta": "0",
  "executionPrice": "0.0000",
  "feeGrowthGlobal0X128Delta": "170141183460469231731687303715884105728",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.0000000000000000000000000000000000000059000",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -880303,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "-26037782196502120271413746514214063808",
  "amount1Before": "1",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "0.000000000000000000038406",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381413820277666488039994629",
  "pairPriceAfter": "0.24850",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -13924,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "pairBalance0": "26037782196502120275425782622539039026",
  "pairBalance1": "1",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "swapError": "VM Exception while processing transaction: revert TN",
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "pairBalance0": "26037782196502120275425782622539039026",
  "pairBalance1": "1",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "swapError": "VM Exception while processing transaction: revert TN",
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token0 for token1 to price 0.40000 1`] = `
Object {
  "pairBalance0": "26037782196502120275425782622539039026",
  "pairBalance1": "1",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "26037782196502120275425782622539039026",
  "pairBalance1": "1",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "-1000",
  "amount1Before": "1",
  "amount1Delta": "2",
  "executionPrice": "0.0020000",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "0.0000000000000000000000000000000000000059000",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -880303,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "1",
  "amount1Delta": "2",
  "executionPrice": "0.0000000000000000020000",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "0.0000000000000000000000000000000000000059000",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -880303,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token1 for token0 to price 0.40000 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "-26037782196502120272263504962370659661",
  "amount1Before": "1",
  "amount1Delta": "1268717215714495283",
  "executionPrice": "0.000000000000000000048726",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "647583145675012958539816297734564973",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": -9164,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests close to min price swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "26037782196502120275425782622539039026",
  "amount0Delta": "-26037782196502120274160871558471687260",
  "amount1Before": "1",
  "amount1Delta": "3171793039286238112",
  "executionPrice": "0.00000000000000000012182",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1618957864187523634078592530170978294",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "0.0000000000000000000000000000000000000059000",
  "tickAfter": 9163,
  "tickBefore": -880303,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-990",
  "executionPrice": "0.99000",
  "feeGrowthGlobal0X128Delta": "1531270651144223085585",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-990",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1000",
  "executionPrice": "1.0101",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1531270651144223085585",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-662654630558341691",
  "executionPrice": "0.66265",
  "feeGrowthGlobal0X128Delta": "1531270651144223085585185733442956951",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.44712",
  "pairPriceBefore": "1.0000",
  "tickAfter": -8050,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-662654630558341691",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.5091",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1531270651144223085585185733442956951",
  "pairPriceAfter": "2.2365",
  "pairPriceBefore": "1.0000",
  "tickAfter": 8049,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1011",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-1000",
  "executionPrice": "0.98912",
  "feeGrowthGlobal0X128Delta": "1701411834604692317316",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "2018163471241170535",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.49550",
  "feeGrowthGlobal0X128Delta": "3090354492722952777645298089881656683",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.25000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -13864,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1172833158595741002",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-735088935932648267",
  "executionPrice": "0.62676",
  "feeGrowthGlobal0X128Delta": "1795924994446436354047871727469285280",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "2000000000000000000",
  "pairBalance1": "2000000000000000000",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-1000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1011",
  "executionPrice": "1.0110",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1701411834604692317316",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "2018163471241170535",
  "executionPrice": "2.0182",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "3090354492722952777645298089881656683",
  "pairPriceAfter": "4.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 13863,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "2000000000000000000",
  "pairBalance1": "2000000000000000000",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests high fee, 1:1 price, 2e18 max range liquidity swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-735088935932648267",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1172833158595741002",
  "executionPrice": "1.5955",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1795924994446436354047871727469285280",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-998",
  "executionPrice": "0.99800",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-998",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1000",
  "executionPrice": "1.0020",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-666399946655997863",
  "executionPrice": "0.66640",
  "feeGrowthGlobal0X128Delta": "102084710076281879321379303167993925",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.44462",
  "pairPriceBefore": "1.0000",
  "tickAfter": -8106,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-666399946655997863",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.5006",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "102084710076281879321379303167993925",
  "pairPriceAfter": "2.2491",
  "pairPriceBefore": "1.0000",
  "tickAfter": 8105,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1002",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-1000",
  "executionPrice": "0.99800",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "2001200720432259367",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.49970",
  "feeGrowthGlobal0X128Delta": "204291995349773347907520066410118522",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.25000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -13864,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1162975445435640719",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-735088935932648265",
  "executionPrice": "0.63208",
  "feeGrowthGlobal0X128Delta": "118722011173132030189178508189317099",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "2000000000000000000",
  "pairBalance1": "2000000000000000000",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-1000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1002",
  "executionPrice": "1.0020",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "2001200720432259373",
  "executionPrice": "2.0012",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "204291995349773347907520066410118521",
  "pairPriceAfter": "4.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 13863,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "2000000000000000000",
  "pairBalance1": "2000000000000000000",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, 1:1 price, 2e18 max range liquidity swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-735088935932648265",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1162975445435640720",
  "executionPrice": "1.5821",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "118722011173132030189178508189317098",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "1199580111974806",
  "amount0Delta": "1000",
  "amount1Before": "1199580111974806",
  "amount1Delta": "-998",
  "executionPrice": "0.99800",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "1199580111974806",
  "amount0Delta": "-998",
  "amount1Before": "1199580111974806",
  "amount1Delta": "1000",
  "executionPrice": "1.0020",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "pairBalance0": "1199580111974806",
  "pairBalance1": "1199580111974806",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "pairBalance0": "1199580111974806",
  "pairBalance1": "1199580111974806",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "1199580111974806",
  "amount0Delta": "1002",
  "amount1Before": "1199580111974806",
  "amount1Delta": "-1000",
  "executionPrice": "0.99800",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "pairBalance0": "1199580111974806",
  "pairBalance1": "1199580111974806",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "1199580111974806",
  "amount0Delta": "1201020652394438",
  "amount1Before": "1199580111974806",
  "amount1Delta": "-1199580111974805",
  "executionPrice": "0.99880",
  "feeGrowthGlobal0X128Delta": "122605845095370084232329312661793",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "1199580111974806",
  "pairBalance1": "1199580111974806",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "1199580111974806",
  "amount0Delta": "-1000",
  "amount1Before": "1199580111974806",
  "amount1Delta": "1002",
  "executionPrice": "1.0020",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "pairBalance0": "1199580111974806",
  "pairBalance1": "1199580111974806",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "1199580111974806",
  "pairBalance1": "1199580111974806",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests low fee, large liquidity around current price (stable swap) swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "1199580111974806",
  "amount0Delta": "-1199580111974805",
  "amount1Before": "1199580111974806",
  "amount1Delta": "1201020652394438",
  "executionPrice": "1.0012",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "122605845095370084232329312661793",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "1000",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "0",
  "executionPrice": "0.0000",
  "feeGrowthGlobal0X128Delta": "29575000",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "0",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "1000",
  "executionPrice": "-Infinity",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "29575000",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "-996999999999999318",
  "executionPrice": "0.99700",
  "feeGrowthGlobal0X128Delta": "88725000000017597125",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "-996999999999999232",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.0030",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "88725000000020140575",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "145660",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "-1000",
  "executionPrice": "0.0068653",
  "feeGrowthGlobal0X128Delta": "12924275",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "1003009027081361181",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.99700",
  "feeGrowthGlobal0X128Delta": "88991975927793784300",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "6706554036096900675845906992672697",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "-4228872409409224753601131225116702",
  "executionPrice": "0.63056",
  "feeGrowthGlobal0X128Delta": "595039006852697512464428097924911949",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "11505743598341114571255423385623647",
  "pairBalance1": "11505743598341114571255423385506404",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "-1000",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "145660",
  "executionPrice": "145.66",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "12924275",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "1003009027081361094",
  "executionPrice": "1.0030",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "88991975927793784300",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "11505743598341114571255423385623647",
  "pairBalance1": "11505743598341114571255423385506404",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests max full range liquidity at 1:1 price with default fee swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "11505743598341114571255423385623647",
  "amount0Delta": "-4228872409409224753601131224936259",
  "amount1Before": "11505743598341114571255423385506404",
  "amount1Delta": "6706554036096900675845906992220230",
  "executionPrice": "1.5859",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "595039006852697512464428097884749099",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "1000",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "-991",
  "executionPrice": "0.99100",
  "feeGrowthGlobal0X128Delta": "510423550381407695195",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.99402",
  "pairPriceBefore": "1.0000",
  "tickAfter": -61,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "-979",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "1000",
  "executionPrice": "1.0215",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "1.0182",
  "pairPriceBefore": "1.0000",
  "tickAfter": 180,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "-662011820624678025",
  "executionPrice": "0.66201",
  "feeGrowthGlobal0X128Delta": "510423550381407695195061911147652317",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.44355",
  "pairPriceBefore": "1.0000",
  "tickAfter": -8130,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "-655417164586189725",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.5257",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195061911147652317",
  "pairPriceAfter": "2.2727",
  "pairPriceBefore": "1.0000",
  "tickAfter": 8209,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "1011",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "-1000",
  "executionPrice": "0.98912",
  "feeGrowthGlobal0X128Delta": "680564733841876926926",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.99402",
  "pairPriceBefore": "1.0000",
  "tickAfter": -61,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "2024171064311638316",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.49403",
  "feeGrowthGlobal0X128Delta": "1033184581225259164735720748018047287",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.24701",
  "pairPriceBefore": "1.0000",
  "tickAfter": -13984,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "1159748196632793863",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "-729098226020826705",
  "executionPrice": "0.62867",
  "feeGrowthGlobal0X128Delta": "591962792073745646583043420635066071",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "1982081649422850916",
  "pairBalance1": "1994009290088178439",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "-1000",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "1023",
  "executionPrice": "1.0230",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "680564733841876926926",
  "pairPriceAfter": "1.0182",
  "pairPriceBefore": "1.0000",
  "tickAfter": 180,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "2061084019890842502",
  "executionPrice": "2.0611",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1052025823067067832041406107723446946",
  "pairPriceAfter": "4.1473",
  "pairPriceBefore": "1.0000",
  "tickAfter": 14225,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "1982081649422850916",
  "pairBalance1": "1994009290088178439",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 0 liquidity, all liquidity around current price swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "1982081649422850916",
  "amount0Delta": "-717170585355499182",
  "amount1Before": "1994009290088178439",
  "amount1Delta": "1147640245432759379",
  "executionPrice": "1.6002",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "585782608634379296280420708203043197",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-996",
  "executionPrice": "0.99600",
  "feeGrowthGlobal0X128Delta": "510423550381407695195",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-996",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1000",
  "executionPrice": "1.0040",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-665331998665331998",
  "executionPrice": "0.66533",
  "feeGrowthGlobal0X128Delta": "510423550381407695195061911147652317",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.44533",
  "pairPriceBefore": "1.0000",
  "tickAfter": -8090,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-665331998665331998",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.5030",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195061911147652317",
  "pairPriceAfter": "2.2455",
  "pairPriceBefore": "1.0000",
  "tickAfter": 8089,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1005",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-1000",
  "executionPrice": "0.99502",
  "feeGrowthGlobal0X128Delta": "680564733841876926926",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "2006018054162487463",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.49850",
  "feeGrowthGlobal0X128Delta": "1023918857334819954209013958517557896",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.25000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -13864,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "1165774985123750584",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "-735088935932648267",
  "executionPrice": "0.63056",
  "feeGrowthGlobal0X128Delta": "595039006852697554786973994761078087",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "2000000000000000000",
  "pairBalance1": "2000000000000000000",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-1000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1005",
  "executionPrice": "1.0050",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "680564733841876926926",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "2006018054162487463",
  "executionPrice": "2.0060",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1023918857334819954209013958517557896",
  "pairPriceAfter": "4.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 13863,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "2000000000000000000",
  "pairBalance1": "2000000000000000000",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, 2e18 max range liquidity swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "2000000000000000000",
  "amount0Delta": "-735088935932648267",
  "amount1Before": "2000000000000000000",
  "amount1Delta": "1165774985123750584",
  "executionPrice": "1.5859",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "595039006852697554786973994761078087",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "1000",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "-996",
  "executionPrice": "0.99600",
  "feeGrowthGlobal0X128Delta": "510423550381407695195",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "-996",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "1000",
  "executionPrice": "1.0040",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "-795933705287758544",
  "executionPrice": "0.79593",
  "feeGrowthGlobal0X128Delta": "256749882580179971840679703106063897",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.63923",
  "pairPriceBefore": "1.0000",
  "tickAfter": -4476,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "-791704042342225227",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.2631",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "259839974299863146991991059322075334",
  "pairPriceAfter": "1.5719",
  "pairPriceBefore": "1.0000",
  "tickAfter": 4523,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "1005",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "-1000",
  "executionPrice": "0.99502",
  "feeGrowthGlobal0X128Delta": "680564733841876926926",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "1342022152495072924",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.74514",
  "feeGrowthGlobal0X128Delta": "344037963272993171369654596359692757",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.56026",
  "pairPriceBefore": "1.0000",
  "tickAfter": -5794,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "2325523181756544449",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "-1464187161953474971",
  "executionPrice": "0.62962",
  "feeGrowthGlobal0X128Delta": "595039006852697724928157455230309818",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "3982081649422850916",
  "pairBalance1": "3994009290088178439",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "-1000",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "1005",
  "executionPrice": "1.0050",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "680564733841876926926",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "1351353308576406667",
  "executionPrice": "1.3514",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "349509475900775043325467715642874353",
  "pairPriceAfter": "1.7992",
  "pairPriceBefore": "1.0000",
  "tickAfter": 5873,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "3982081649422850916",
  "pairBalance1": "3994009290088178439",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:1 price, additional liquidity around current price swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "3982081649422850916",
  "amount0Delta": "-1452259521288147449",
  "amount1Before": "3994009290088178439",
  "amount1Delta": "2313415230556509964",
  "executionPrice": "1.5930",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "595039006852697639857565724995693952",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "1000",
  "amount1Before": "632455532033675867",
  "amount1Delta": "-99",
  "executionPrice": "0.099000",
  "feeGrowthGlobal0X128Delta": "510423550381407695195",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.10000",
  "pairPriceBefore": "0.10000",
  "tickAfter": -23028,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "-9969",
  "amount1Before": "632455532033675867",
  "amount1Delta": "1000",
  "executionPrice": "0.10031",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "0.10000",
  "pairPriceBefore": "0.10000",
  "tickAfter": -23028,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "632455532033675867",
  "amount1Delta": "-86123526743846551",
  "executionPrice": "0.086124",
  "feeGrowthGlobal0X128Delta": "510423550381407695195061911147652317",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.074620",
  "pairPriceBefore": "0.10000",
  "tickAfter": -25955,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "-3869747612262812753",
  "amount1Before": "632455532033675867",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "0.25841",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407865336245371616884047",
  "pairPriceAfter": "0.66378",
  "pairPriceBefore": "0.10000",
  "tickAfter": -4099,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "10032",
  "amount1Before": "632455532033675867",
  "amount1Delta": "-1000",
  "executionPrice": "0.099681",
  "feeGrowthGlobal0X128Delta": "5274376687274546183682",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.10000",
  "pairPriceBefore": "0.10000",
  "tickAfter": -23028,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "pairBalance0": "6324555320336758664",
  "pairBalance1": "632455532033675867",
  "pairPriceBefore": "0.10000",
  "swapError": "VM Exception while processing transaction: revert TN",
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token0 for token1 to price 0.40000 1`] = `
Object {
  "pairBalance0": "6324555320336758664",
  "pairBalance1": "632455532033675867",
  "pairPriceBefore": "0.10000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "6324555320336758664",
  "pairBalance1": "632455532033675867",
  "pairPriceBefore": "0.10000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "-1000",
  "amount1Before": "632455532033675867",
  "amount1Delta": "102",
  "executionPrice": "0.10200",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "170141183460469231731",
  "pairPriceAfter": "0.10000",
  "pairPriceBefore": "0.10000",
  "tickAfter": -23028,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "632455532033675867",
  "amount1Delta": "119138326055954425",
  "executionPrice": "0.11914",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "60811007371978153949466126675899993",
  "pairPriceAfter": "0.14109",
  "pairPriceBefore": "0.10000",
  "tickAfter": -19585,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token1 for token0 to price 0.40000 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "-3162277660168379331",
  "amount1Before": "632455532033675867",
  "amount1Delta": "634358607857247611",
  "executionPrice": "0.20060",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "323791572837503501799197590655727195",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "0.10000",
  "tickAfter": -9164,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 1:10 price, 2e18 max range liquidity swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "6324555320336758664",
  "amount0Delta": "-5059644256269406930",
  "amount1Before": "632455532033675867",
  "amount1Delta": "2537434431428990440",
  "executionPrice": "0.50150",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1295166291350014177337973823092140516",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "0.10000",
  "tickAfter": 9163,
  "tickBefore": -23028,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "1000",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "-9969",
  "executionPrice": "9.9690",
  "feeGrowthGlobal0X128Delta": "510423550381407695195",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "10.000",
  "pairPriceBefore": "10.000",
  "tickAfter": 23027,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "-99",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "1000",
  "executionPrice": "10.101",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "10.000",
  "pairPriceBefore": "10.000",
  "tickAfter": 23027,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "-3869747612262812754",
  "executionPrice": "3.8697",
  "feeGrowthGlobal0X128Delta": "510423550381407865336245371616884048",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.5065",
  "pairPriceBefore": "10.000",
  "tickAfter": 4098,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "-86123526743846551",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "11.611",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195061911147652317",
  "pairPriceAfter": "13.401",
  "pairPriceBefore": "10.000",
  "tickAfter": 25954,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "102",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "-1000",
  "executionPrice": "9.8039",
  "feeGrowthGlobal0X128Delta": "170141183460469231731",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "10.000",
  "pairPriceBefore": "10.000",
  "tickAfter": 23027,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "119138326055954425",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "8.3936",
  "feeGrowthGlobal0X128Delta": "60811007371978153949466126675899993",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "7.0877",
  "pairPriceBefore": "10.000",
  "tickAfter": 19584,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "2537434431428990438",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "-5059644256269406930",
  "executionPrice": "1.9940",
  "feeGrowthGlobal0X128Delta": "1295166291350014007196790362622908786",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "10.000",
  "tickAfter": -9164,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token0 for token1 to price 2.5000 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "634358607857247610",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "-3162277660168379331",
  "executionPrice": "4.9850",
  "feeGrowthGlobal0X128Delta": "323791572837503501799197590655727196",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "10.000",
  "tickAfter": 9163,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "632455532033675867",
  "amount0Delta": "-1000",
  "amount1Before": "6324555320336758664",
  "amount1Delta": "10032",
  "executionPrice": "10.032",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "5274376687274546183682",
  "pairPriceAfter": "10.000",
  "pairPriceBefore": "10.000",
  "tickAfter": 23027,
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "pairBalance0": "632455532033675867",
  "pairBalance1": "6324555320336758664",
  "pairPriceBefore": "10.000",
  "swapError": "VM Exception while processing transaction: revert TN",
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "632455532033675867",
  "pairBalance1": "6324555320336758664",
  "pairPriceBefore": "10.000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, 10:1 price, 2e18 max range liquidity swap token1 for token0 to price 2.5000 1`] = `
Object {
  "pairBalance0": "632455532033675867",
  "pairBalance1": "6324555320336758664",
  "pairPriceBefore": "10.000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 23027,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "pairBalance0": "1995041008271423675",
  "pairBalance1": "0",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "amount0Before": "1995041008271423675",
  "amount0Delta": "-996",
  "amount1Before": "0",
  "amount1Delta": "1000",
  "executionPrice": "1.0040",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "pairBalance0": "1995041008271423675",
  "pairBalance1": "0",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "amount0Before": "1995041008271423675",
  "amount0Delta": "-665331998665331998",
  "amount1Before": "0",
  "amount1Delta": "1000000000000000000",
  "executionPrice": "1.5030",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "510423550381407695195061911147652317",
  "pairPriceAfter": "2.2455",
  "pairPriceBefore": "1.0000",
  "tickAfter": 8089,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "pairBalance0": "1995041008271423675",
  "pairBalance1": "0",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "pairBalance0": "1995041008271423675",
  "pairBalance1": "0",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "1995041008271423675",
  "amount0Delta": "0",
  "amount1Before": "0",
  "amount1Delta": "0",
  "executionPrice": "NaN",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "1995041008271423675",
  "pairBalance1": "0",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "amount0Before": "1995041008271423675",
  "amount0Delta": "-1000",
  "amount1Before": "0",
  "amount1Delta": "1005",
  "executionPrice": "1.0050",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "680564733841876926926",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 0,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "amount0Before": "1995041008271423675",
  "amount0Delta": "-1000000000000000000",
  "amount1Before": "0",
  "amount1Delta": "2006018054162487463",
  "executionPrice": "2.0060",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "1023918857334819954209013958517557896",
  "pairPriceAfter": "4.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 13863,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "1995041008271423675",
  "pairBalance1": "0",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token0 liquidity only swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "1995041008271423675",
  "amount0Delta": "-735088935932648267",
  "amount1Before": "0",
  "amount1Delta": "1165774985123750584",
  "executionPrice": "1.5859",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "595039006852697554786973994761078087",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap exactly 0.0000000000000010000 token0 for token1 1`] = `
Object {
  "amount0Before": "0",
  "amount0Delta": "1000",
  "amount1Before": "1995041008271423675",
  "amount1Delta": "-996",
  "executionPrice": "0.99600",
  "feeGrowthGlobal0X128Delta": "510423550381407695195",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap exactly 0.0000000000000010000 token1 for token0 1`] = `
Object {
  "pairBalance0": "0",
  "pairBalance1": "1995041008271423675",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap exactly 1.0000 token0 for token1 1`] = `
Object {
  "amount0Before": "0",
  "amount0Delta": "1000000000000000000",
  "amount1Before": "1995041008271423675",
  "amount1Delta": "-665331998665331998",
  "executionPrice": "0.66533",
  "feeGrowthGlobal0X128Delta": "510423550381407695195061911147652317",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.44533",
  "pairPriceBefore": "1.0000",
  "tickAfter": -8090,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap exactly 1.0000 token1 for token0 1`] = `
Object {
  "pairBalance0": "0",
  "pairBalance1": "1995041008271423675",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token0 for exactly 0.0000000000000010000 token1 1`] = `
Object {
  "amount0Before": "0",
  "amount0Delta": "1005",
  "amount1Before": "1995041008271423675",
  "amount1Delta": "-1000",
  "executionPrice": "0.99502",
  "feeGrowthGlobal0X128Delta": "680564733841876926926",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "1.0000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -1,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token0 for exactly 1.0000 token1 1`] = `
Object {
  "amount0Before": "0",
  "amount0Delta": "2006018054162487463",
  "amount1Before": "1995041008271423675",
  "amount1Delta": "-1000000000000000000",
  "executionPrice": "0.49850",
  "feeGrowthGlobal0X128Delta": "1023918857334819954209013958517557896",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.25000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -13864,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token0 for token1 to price 0.40000 1`] = `
Object {
  "amount0Before": "0",
  "amount0Delta": "1165774985123750584",
  "amount1Before": "1995041008271423675",
  "amount1Delta": "-735088935932648267",
  "executionPrice": "0.63056",
  "feeGrowthGlobal0X128Delta": "595039006852697554786973994761078087",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "0.40000",
  "pairPriceBefore": "1.0000",
  "tickAfter": -9164,
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token0 for token1 to price 2.5000 1`] = `
Object {
  "pairBalance0": "0",
  "pairBalance1": "1995041008271423675",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token1 for exactly 0.0000000000000010000 token0 1`] = `
Object {
  "pairBalance0": "0",
  "pairBalance1": "1995041008271423675",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token1 for exactly 1.0000 token0 1`] = `
Object {
  "pairBalance0": "0",
  "pairBalance1": "1995041008271423675",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert T",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token1 for token0 to price 0.40000 1`] = `
Object {
  "pairBalance0": "0",
  "pairBalance1": "1995041008271423675",
  "pairPriceBefore": "1.0000",
  "swapError": "VM Exception while processing transaction: revert SPL",
  "tickBefore": 0,
}
`;

exports[`UniswapV3Pair swap tests medium fee, token1 liquidity only swap token1 for token0 to price 2.5000 1`] = `
Object {
  "amount0Before": "0",
  "amount0Delta": "0",
  "amount1Before": "1995041008271423675",
  "amount1Delta": "0",
  "executionPrice": "NaN",
  "feeGrowthGlobal0X128Delta": "0",
  "feeGrowthGlobal1X128Delta": "0",
  "pairPriceAfter": "2.5000",
  "pairPriceBefore": "1.0000",
  "tickAfter": 9163,
  "tickBefore": 0,
}
`;
